--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 body {
-  background-color: #34495e;
+  margin: 0;
+  padding: 0;
+}
+.AthensBackground {
+  background-image: url('./assets/athens.jpg');
+  /*background-position: center center;*/
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
+  width: 100vw;
+  height: 100vh;
+}
+
+.TransparentBackground {
+  background-color: rgba(0,0,0,0.55);
+  width: 100vw;
+  height: 100vh;
 }
